# offstream

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  release.yaml
src/: cli.rs  client.rs  database.rs  error.rs  init.sql  main.rs
