[package]
name = "offstream"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
color-eyre = "0.5"
directories = "3.0"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty", "humantime"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "cookies"] }
rusqlite = { version = "0.25", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "1.3"

[profile.release]
lto = "fat"
codegen-units = 1
