[package]
name = "offstream"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
color-eyre = "0.5"
directories = "3.0"
opentelemetry = { version = "0.15", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.14"
reqwest = { version = "0.11", features = ["json", "cookies"] }
rusqlite = { version = "0.25", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.14"
tracing-subscriber = "0.2"
urlencoding = "1.3"

[profile.release]
lto = "fat"
codegen-units = 1
